fixed row alignment to banner

--- a/src/components/category/category.styles.scss
+++ b/src/components/category/category.styles.scss
@@ -1,18 +1,25 @@
    .category__container {
         height: 20rem;
         margin-left: 2rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
 
         .category__title {
-            color: white;
             position: relative;
-            top: 2rem;
+            top: -3rem;
+            color: white;
             font-family: "Roboto";
+            margin-left: .5rem;
         }
+
        .category__content {
+           position: relative;
+           top: -3.5rem;
            display: flex;
            align-items: center;
            width: 100%;
-           height: 20rem;
+           height: 18rem;
            
    
            .scroll__left {
